Add linting scripts to package.json

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .js --ext .jsx",
+    "lint:fix": "eslint . --ext .js --ext .jsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
