--- a/appspec.yml
+++ b/appspec.yml
@@ -13,8 +13,8 @@ files:
 permissions:
   - object: /var/www/React-Crud_nodewithSql_App
     pattern: "**"
-    owner: ec2-user        # change if you use a different user
-    group: ec2-user
+    owner: root        # change if you use a different user
+    group: root
     mode: 755
     type:
       - file
@@ -24,24 +24,24 @@ hooks:
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 60
-      runas: ec2-user
+      runas: root
 
   BeforeInstall:
     - location: scripts/clean_old.sh
       timeout: 180
-      runas: ec2-user
+      runas: root
 
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
 
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
 
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 60
-      runas: ec2-user
+      runas: root
