--- a/appspec.yml
+++ b/appspec.yml
@@ -24,7 +24,7 @@ hooks:
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 60
-      runas: ec2-user
+      runas: root
 
   BeforeInstall:
     - location: scripts/clean_old.sh
@@ -34,14 +34,14 @@ hooks:
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: ec2-user
+      runas: root 
 
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
-      runas: ec2-user
+      runas: root 
 
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 60
-      runas: ec2-user
+      runas: root
