--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,16 @@ files:
   - source: client/build
     destination: /var/www/React-Crud_nodewithSql_App/client
 
+permissions:
+  - object: /var/www/React-crud_nodewithsql_App
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
+    type:
+      - file
+      - directory
+
 hooks:
   ApplicationStop:
     - location: scripts/stop_server.sh
