--- a/appspec.yml
+++ b/appspec.yml
@@ -24,24 +24,24 @@ hooks:
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 60
-      runas: root
+      runas: ubuntu
 
   BeforeInstall:
     - location: scripts/clean_old.sh
       timeout: 180
-      runas: root
+      runas: ubuntu
 
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: root 
+      runas: ubuntu 
 
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
-      runas: root 
+      runas: ubuntu 
 
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 60
-      runas: root
+      runas: ubuntu
