Change runas user from 'root' to 'ubuntu'

--- a/appspec.yml
+++ b/appspec.yml
@@ -29,7 +29,7 @@ hooks:
   BeforeInstall:
     - location: scripts/clean_old.sh
       timeout: 180
-      runas: root
+      runas: ubuntu
 
   AfterInstall:
     - location: scripts/install_dependencies.sh
