--- a/appspec.yml
+++ b/appspec.yml
@@ -1,46 +1,25 @@
 version: 0.0
 os: linux
-
 files:
-  # Deploy Node/Express server
-  - source: server
-    destination: /var/www/React-Crud_nodewithSql_App/server
-
-  # Deploy built React client (from CodeBuild artifact)
-  - source: client/build
-    destination: /var/www/React-Crud_nodewithSql_App/client
-
-permissions:
-  - object: /var/www/React-Crud_nodewithSql_App
-    pattern: "**"
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-    type:
-      - file
-      - directory
-
+  - source: /
+    destination: /var/www/React-Crud_nodewithSql_App/client # Adjust this path based on your server setup
 hooks:
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: scripts/stop_application.sh
       timeout: 60
       runas: root
-
   BeforeInstall:
-    - location: scripts/clean_old.sh
-      timeout: 180
+    - location: scripts/before_install.sh
+      timeout: 300
       runas: root
-
   AfterInstall:
-    - location: scripts/install_dependencies.sh
+    - location: scripts/after_install.sh
       timeout: 300
-      runas: root 
-
+      runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: root 
-
+    - location: scripts/start_application.sh
+      timeout: 60
+      runas: root
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 60
