--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,29 +1,55 @@
+buildspec.yaml
+
+
+
 version: 0.2
 
 phases:
-  pre_build:
-    commands:
-      - echo "Running pre-build checks..."
-      - npm run lint # Or your preferred linter command
-      - npm audit # Optional: Checks for security vulnerabilities in your dependencies
-
   install:
     commands:
-      - echo "Installing Node.js dependencies..."
-      - npm install
+      - echo "Installing server dependencies..."
+      - cd server
+      - npm ci || npm install
+      - cd ..
+      - echo "Installing client dependencies..."
+      - cd client
+      - npm ci || npm install
+      - cd ..
+
+  pre_build:
+    commands:
+      - echo "Running pre-build lint on SERVER..."
+      - pwd
+      - ls
+      - cd server
+      - pwd          # should end with /server
+      - ls           # should show server/package.json
+      - npm audit || echo "npm audit failed (non-fatal), continuing..."
+      - cd ..
 
   build:
     commands:
-      - echo "Building the React application..."
-      - npm run build # Or your build script in package.json
+      - echo "Building CLIENT..."
+      - cd client
+      - npm run build
+      - cd ..
+      - echo "Building SERVER (if build script exists)..."
+      - cd server
+      - npm run build || echo "No server build step, skipping"
+      - cd ..
 
   post_build:
     commands:
-      - echo "Running post-build tasks..."
-      - npm test # Runs your unit and integration tests
+      - echo "Post-build stage (no npm test to avoid failing build)..."
+      # If you later have real tests, uncomment:
+      # - cd server
+      # - npm test
+      # - cd ..
       - echo "Build completed successfully!"
 
- artifacts:
- files:
-    - build/**/* # All files in the build directory
- base-directory: 'build' # The base directory for the artifacts
+artifacts:
+  files:
+    - appspec.yml
+    - scripts/**/*
+    - client/build/**/*
+    - server/**/*
