--- a/appspec.yml
+++ b/appspec.yml
@@ -1,25 +1,50 @@
+appespec.yml
+
+
+
 version: 0.0
 os: linux
+
 files:
-  - source: /
-    destination: /var/www/React-Crud_nodewithSql_App/client # Adjust this path based on your server setup
+  # Deploy Node/Express server
+  - source: server
+    destination: /var/www/React-Crud_nodewithSql_App/server
+
+  # Deploy built React client (from CodeBuild artifact)
+  - source: client/build
+    destination: /var/www/React-Crud_nodewithSql_App/client
+
+permissions:
+  - object: /var/www/React-Crud_nodewithSql_App
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
+    type:
+      - file
+      - directory
+
 hooks:
   ApplicationStop:
-    - location: scripts/stop_application.sh
+    - location: scripts/stop_server.sh
       timeout: 60
       runas: root
+
   BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
+    - location: scripts/clean_old.sh
+      timeout: 180
       runas: root
+
   AfterInstall:
-    - location: scripts/after_install.sh
+    - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: root
+      runas: root 
+
   ApplicationStart:
-    - location: scripts/start_application.sh
-      timeout: 60
-      runas: root
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: root 
+
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 60
