--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,8 @@ os: linux
 files:
   - source: /
     destination: /var/www/React-Crud_nodewithSql_App/client # Adjust this path based on your server setup
+  - source: /
+    destination: /var/www/React-Crud_nodewithSql_App/server
 hooks:
   ApplicationStop:
     - location: scripts/stop_application.sh
