--- a/appspec.yml
+++ b/appspec.yml
@@ -9,22 +9,22 @@ files:
     destination: /var/www/React-Crud_nodewithSql_App/scripts
 hooks:
   ApplicationStop:
-    - location: scripts/stop_application.sh
+    - location: stop_application.sh
       timeout: 60
       runas: root
   BeforeInstall:
-    - location: scripts/before_install.sh
+    - location: before_install.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/after_install.sh
+    - location: after_install.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_application.sh
+    - location: start_application.sh
       timeout: 60
       runas: root
   ValidateService:
-    - location: scripts/validate_service.sh
+    - location: validate_service.sh
       timeout: 60
       runas: root
