--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,51 +1,49 @@
-
 version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 22 # Use a supported Node.js version
     commands:
-      - echo "Installing server dependencies..."
-      - cd server
-      - npm ci || npm install
-      - cd ..
-      - echo "Installing client dependencies..."
-      - cd client
-      - npm ci || npm install
-      - cd ..
+      # Install the SQL Server command-line tools if needed for any specific build steps
+      - echo "Installing SQL Server tools (optional)"
+      # Example for Ubuntu image:
+      # - curl packages.microsoft.com | sudo apt-key add -
+      # - curl packages.microsoft.com(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/msprod.list
+      # - sudo apt-get update
+      # - sudo apt-get install -y mssql-tools unixodbc-dev
 
   pre_build:
     commands:
-      - echo "Running pre-build lint on SERVER..."
-      - pwd
-      - ls
+      - echo "Starting pre-build phase..."
+      # Navigate to the client directory and install dependencies
+      - cd client
+      - npm install
+      # Return to the root directory
+      - cd ..
+      # Navigate to the server directory and install dependencies
       - cd server
-      - pwd          # should end with /server
-      - ls           # should show server/package.json
-      - npm audit || echo "npm audit failed (non-fatal), continuing..."
+      - npm install
+      # Return to the root directory
       - cd ..
 
   build:
     commands:
-      - echo "Building CLIENT..."
+      - echo "Starting build phase..."
+      # Build the React client application
       - cd client
       - npm run build
+      # Return to the root directory
       - cd ..
-      - echo "Building SERVER (if build script exists)..."
-      - cd server
-      - npm run build || echo "No server build step, skipping"
-      - cd ..
+      # Note: Node.js server-side code typically does not require a separate 'build' command unless using TypeScript or a bundler like esbuild.
 
   post_build:
     commands:
-      - echo "Post-build stage (no npm test to avoid failing build)..."
-      # If you later have real tests, uncomment:
-      # - cd server
-      # - npm test
-      # - cd ..
-      - echo "Build completed successfully!"
+      - echo "Starting post-build phase..."
+      # Commands for deployment or packaging artifacts (e.g., copying files to S3, deploying to an environment) would go here
 
 artifacts:
   files:
-      - build/**/* # All files in the build directory
-  base-directory: 'build' # The base directory for the artifacts
-   
+    - '**/*'
+  # You might want to adjust the base-directory if you're deploying a specific folder (e.g., the server directory or a combined artifact directory)
+  # base-directory: server
