--- a/appspec.yml
+++ b/appspec.yml
@@ -1,12 +1,12 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /var/www/React-Crud_nodewithSql_App # Adjust the destination path as needed
+  - source: / # Copies everything from the root of my Github repo
+    destination: /var/www/React-Crud_nodewithSql_App # The deployment path on EC2 instance
 hooks:
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 60
       runas: root
   AfterInstall:
     - location: scripts/after_install.sh
@@ -14,9 +14,9 @@ hooks:
       runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
-      timeout: 300
+      timeout: 120
       runas: root
   ValidateService:
     - location: scripts/validate_service.sh
-      timeout: 300
+      timeout: 60
       runas: root
