--- a/appspec.yml
+++ b/appspec.yml
@@ -8,6 +8,10 @@ hooks:
     - location: scripts/application_stop.sh
       timeout: 60
       runas: root
+  BeforeInstall:
+    -location: scripts/before_install.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
@@ -19,4 +23,5 @@ hooks:
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 60
+
       runas: root
